--- a/srcbin/Makefile.xw32
+++ b/srcbin/Makefile.xw32
@@ -35,6 +35,8 @@ IMAGEOBJ=quizhg.inc hginfo.inc titimg.inc
 SOUNDOBJ=errorsnd.inc infosnd.inc introsnd.inc rightsnd.inc wrongsnd.inc \
          neutralsnd.inc
 
+SHELL = /bin/sh
+
 default: windows
 
 include common.mak
