--- a/srcbin/Makefile.fpc
+++ b/srcbin/Makefile.fpc
@@ -1,5 +1,7 @@
 # Compile with FPC for the native machine
 
+# $Id: Makefile.fpc,v 1.3 2006/08/17 08:27:58 akf Exp $
+
 # make further changes in common.mak
 
 # Conditional Defines:
@@ -56,4 +58,3 @@ SOUNDOBJ=errorsnd.inc infosnd.inc introsnd.inc rightsnd.inc wrongsnd.inc \
 SHELL = /bin/sh
 
 include common.mak
-
