--- a/srcbin/Makefile.gpc
+++ b/srcbin/Makefile.gpc
@@ -1,5 +1,7 @@
 # Compile with GPC for the native machine
 
+# $Id: Makefile.gpc,v 1.3 2006/08/17 08:27:58 akf Exp $
+
 # make further changes in common.mak
 
 # Conditional Defines:
