--- a/srcbin/Makefile.xw32
+++ b/srcbin/Makefile.xw32
@@ -1,5 +1,7 @@
 # use FPC Cross-Compiler for windows
 
+# $Id: Makefile.xw32,v 1.3 2006/08/17 08:27:58 akf Exp $
+
 # Edit this file for Compiler-specific configuration
 # make further changes in common.mak
 
