configure creates akfquiz.iss from innosetup.in

--- a/srcbin/w32/Makefile
+++ b/srcbin/w32/Makefile
@@ -6,10 +6,11 @@ wquizchooser:
 	$(MAKE) -C .. wquizchooser
 
 clean:
-	-rm -f *.or *.o *.ow *.old 
+	-rm -f *.or *.o *.ow *.old
 	-rm -f *.rc
 	-rm -f COPYING.txt COPYING.de.txt
 
 distclean: clean
+	-rm -f akfquiz.iss
 
 new: distclean
