dist-windows: better solution for old hacks

--- a/srcbin/w32/Makefile
+++ b/srcbin/w32/Makefile
@@ -5,12 +5,15 @@ all:
 wquizchooser:
 	$(MAKE) -C .. wquizchooser
 
-clean:
+mostlyclean:
 	-rm -f *.or *.o *.ow *.old
 	-rm -f *.rc
 	-rm -f COPYING.txt COPYING.de.txt
 
+clean: mostlyclean
+
 distclean: clean
-	-rm -f akfquiz.iss
+	-rm -f innosetup.iss
+	-rm -f *.akfquiz
 
 new: distclean
