--- a/srcbin/common.in
+++ b/srcbin/common.in
@@ -1,4 +1,4 @@
-# $Id: common.in,v 1.2 2006/08/17 08:27:58 akf Exp $
+# $Id: common.in,v 1.3 2006/08/21 11:00:16 akf Exp $
 
 #####################################################################
 # change here:
@@ -137,7 +137,6 @@ distclean: veryclean
 	-rm -f *.exe
 	-rm -f config.inc
 	-rm -f common.mak Makefile
-	-dos2unix ../share/akfquiz/*.akfquiz
 
 maintainer-clean: distclean
 
@@ -278,7 +277,7 @@ uninstall:
 	-rm -r $(DESTDIR)$(quizpath)
 	-rm -r $(DESTDIR)$(docdir)
 
-pkg-dos: veryclean
+dist-dos: veryclean
 	move *.exe ..\..\bin
 	cd ..\..
 	-zip -9vr aqz$(SVERSION)-b.zip bin doc share
