--- a/srcbin/Makefile.gpc
+++ b/srcbin/Makefile.gpc
@@ -1,6 +1,6 @@
 # Compile with GPC for the native machine
 
-# $Id: Makefile.gpc,v 1.3 2006/08/17 08:27:58 akf Exp $
+# $Id: Makefile.gpc,v 1.4 2006/08/27 06:47:35 akf Exp $
 
 # make further changes in common.mak
 
@@ -20,11 +20,10 @@
 #          - Omit the Link to the project's homepage
 #            (still remains in the Meta-data)
 
-PC=gpc
+PC=gpc --automake --executable-file-name
 
 # Flags for GNU-Pascal
-PFLAGS=--automake --executable-file-name
-#PFLAGS+=-Wall -Wno-identifier-case
+PFLAGS+=-Wall -Wno-identifier-case
 POPT=-O2 -s
 
 # no cross-compiling
