compiling under mingw32

--- a/srcbin/w32/Makefile
+++ b/srcbin/w32/Makefile
@@ -1,12 +1,20 @@
 SHELL = /bin/sh
+.SUFFIXES: .res .rc
 
 all: 
 
 wquizchooser:
 	$(MAKE) -C .. wquizchooser
 
+%.res: %.rc
+	windres -i $< -o $@
+
+w32res: cgiquiz.res grquiz.res linequiz.res mkquiz.res \
+        scrquiz.res wquizchooser.res
+
 mostlyclean:
 	-rm -f *.or *.o *.ow *.old
+	-rm -f *.res
 	-rm -f COPYING.txt COPYING.de.txt
 
 clean: mostlyclean
