--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.5 2006/08/27 06:47:35 akf Exp $
+# $Id: Makefile.in,v 1.6 2006/09/13 10:23:30 akf Exp $
 #
 # this Makefile is just a glue to the others
 # if you want to configure things, use the script configure 
@@ -117,7 +117,7 @@ dist: distclean
 	  ../akfquiz-$(VERSION).main.tar.gz \
 	      akfquiz/start \
 	      akfquiz/configure \
-	      akfquiz/Makefile \
+	      akfquiz/Makefile.in \
 	      akfquiz/desktop/ \
 	      akfquiz/share/akfquiz/Linux-en.akfquiz \
 	      akfquiz/share/akfquiz/Linux-de.akfquiz \
