--- a/srcbin/common.in
+++ b/srcbin/common.in
@@ -1,4 +1,4 @@
-# $Id: common.in,v 1.6 2006/09/13 08:00:44 akf Exp $
+# $Id: common.in,v 1.7 2006/09/13 10:23:30 akf Exp $
 
 #####################################################################
 # change here:
@@ -43,7 +43,7 @@ most: scrquiz linequiz mkquiz cgiquiz diaquiz
 dos: scrquiz linequiz mkquiz # grquiz
 
 # compile for Windows
-windows: wquizchooser scrquiz linequiz mkquiz cgiquiz grquiz
+windows: w32res wquizchooser scrquiz linequiz mkquiz cgiquiz grquiz
 
 doc:
 	$(MAKE) -C ../doc 
@@ -130,6 +130,10 @@ diaquiz: diaquiz.pas qsys.pas qmsgs.pas uakfquiz.pas dialog.pas
 # just for Unix, just FPC
 gtkquizchooser: gtkquizchooser.pas
 	-$(PC) $(PFLAGS) $(POPT) $(DEFINES) $(GUIFLAG) gtkquizchooser.pas
+
+# just for Windows
+w32res:
+	$(MAKE) -C w32 w32res
 
 # just for Windows, just FPC
 wquizchooser: w32/wquizchooser.pas
