--- a/srcbin/common.in
+++ b/srcbin/common.in
@@ -1,4 +1,4 @@
-# $Id: common.in,v 1.7 2006/09/13 10:23:30 akf Exp $
+# $Id: common.in,v 1.8 2006/09/13 16:16:19 akf Exp $
 
 #####################################################################
 # change here:
@@ -43,7 +43,7 @@ most: scrquiz linequiz mkquiz cgiquiz diaquiz
 dos: scrquiz linequiz mkquiz # grquiz
 
 # compile for Windows
-windows: w32res wquizchooser scrquiz linequiz mkquiz cgiquiz grquiz
+windows: w32res wquizchooser scrquiz linequiz mkquiz grquiz
 
 doc:
 	$(MAKE) -C ../doc 
