get rid of gtkquizchooser and wquizchooser

--- a/desktop/akfquiz-web.desktop
+++ b/desktop/akfquiz-web.desktop
@@ -3,6 +3,6 @@ Version=1.0
 Encoding=UTF-8
 Name=AKFQuiz: Homepage
 Type=Link
-URL=http://akfoerster.de/akfquiz/
+URL=http://akfquiz.nongnu.org/
 Icon=AKFQuiz.xpm
 GenericName=AKFQuiz
