--- a/srcbin/w32/innosetup.in
+++ b/srcbin/w32/innosetup.in
@@ -11,7 +11,7 @@ OutputBaseFileName=@OutputBaseFileName@
 VersionInfoVersion=@VersionInfoVersion@
 VersionInfoCopyright=Copyright AKFoerster, GPL v2 or later
 OutputDir=..\..\..
-; SetupIconFile is not supported under 95/98/ME
+; SetupIconFile is not supported under 95/98/ME and Wine
 ;SetupIconFile=AKFQuiz.ico
 PrivilegesRequired=none
 ChangesAssociations=yes
@@ -19,7 +19,7 @@ ChangesEnvironment=yes
 AppPublisher=AKFoerster
 AppPublisherURL=http://akfoerster.de/
 AppSupportURL=http://akfoerster.de/support
-AppUpdatesURL=http://akfoerster.de/akfquiz/
+AppUpdatesURL=http://akfquiz.nongnu.org/
 AppComments=ported from GNU/Linux
 ;AppReadmeFile=
 DirExistsWarning=no
@@ -63,8 +63,8 @@ de.unfreequiz=auch nicht freie Quiz-Dateien installieren
 ;de.installsrc=Quell-Texte entpacken
 ;en.installcgi=unpack CGI program (no automatic installation!)
 ;de.installcgi=CGI Programm entpacken (keine automatische Installation!)
-en.new=edit or create quiz
-de.new=Quiz bearbeiten oder erstellen
+;en.new=edit or create quiz
+;de.new=Quiz bearbeiten oder erstellen
 en.Usage=Usage instructions
 de.Usage=Benutzungshinweise
 en.htmlupdate=HTML files update
@@ -73,8 +73,8 @@ en.htmlstart=HTML quizfiles
 de.htmlstart=HTML Quiz-Dateien
 en.quizupload=publish a quizfile
 de.quizupload=Quiz-Datei veröffentlichen
-en.sdldownload=download the needed SDL 1.2.x "Runtime library" for "Win32"
-de.sdldownload=benötigte SDL 1.2.x "Runtime library" für "Win32" herunterladen
+;en.sdldownload=download the needed SDL 1.2.x "Runtime library" for "Win32"
+;de.sdldownload=benötigte SDL 1.2.x "Runtime library" für "Win32" herunterladen
 
 ; delete files made by my program (reproducable)
 [UninstallDelete]
@@ -86,14 +86,12 @@ Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{
 Name: "unfreequiz"; Description: "{cm:unfreequiz}"; GroupDescription: "{cm:addon}";
 Name: "edit"; Description: "{cm:edit}"; GroupDescription: "{cm:addon}";
 ;Name: "cgi"; Description: "{cm:installcgi}"; GroupDescription: "{cm:addon}"; Flags: unchecked;
-;Name: "src"; Description: "{cm:installsrc}"; GroupDescription: "{cm:addon}"; Flags: unchecked;
 
 [Files]
 Source: "..\mkquiz.exe";      DestDir: "{app}\bin";
 Source: "..\scrquiz.exe";     DestDir: "{app}\bin";
 Source: "..\linequiz.exe";    DestDir: "{app}\bin";
 Source: "..\grquiz.exe";      DestDir: "{app}\bin";
-Source: "..\wquizchooser.exe";DestDir: "{app}\bin";
 Source: "..\..\..\SDL\SDL.dll";  DestDir: "{app}\bin"; Flags: skipifsourcedoesntexist;
 Source: "..\..\..\SDL\README-SDL.txt";DestDir: "{app}\doc"; Flags: skipifsourcedoesntexist;
 Source: "AKFQuiz.ico";        DestDir: "{app}";
@@ -114,20 +112,9 @@ Source: "..\..\doc\deutsch\*.*"; DestDir: "{app}\doc\deutsch";
 Source: "*.txt";              DestDir: "{app}\doc";
 Source: "template";           DestDir: "{app}\doc\english"; DestName: "template";
 Source: "template-de";        DestDir: "{app}\doc\deutsch"; DestName: "template";
-;Source: "AKFQuiz.ico";        DestDir: "{app}\src\w32"; Tasks: src
-;Source: "*.rc";               DestDir: "{app}\src\w32"; Tasks: src
-;Source: "..\quizstat";        DestDir: "{app}\src"; Tasks: src
-;Source: "akfquiz.iss";        DestDir: "{app}\src\w32"; Tasks: src
-;Source: "..\*.pas";           DestDir: "{app}\src"; Tasks: src
-;Source: "..\*.inc";           DestDir: "{app}\src"; Tasks: src
-;source: "..\*.ppm";           DestDir: "{app}\src"; Tasks: src
-;Source: "..\*.xpm";           DestDir: "{app}\src"; Tasks: src
-;;Source: "configure";         DestDir: "{app}\src"; Tasks: src
-;Source: "..\Makefile*";       DestDir: "{app}\src"; Tasks: src
-;Source: "..\*.mak";           DestDir: "{app}\src"; Tasks: src
 
 [INI]
-Filename: "{app}\doc\akfquiz.url"; Section: "InternetShortcut"; Key: "URL"; String: "http://akfoerster.de/akfquiz/"; Languages: en
+Filename: "{app}\doc\akfquiz.url"; Section: "InternetShortcut"; Key: "URL"; String: "http://akfquiz.nongnu.org/"; Languages: en
 Filename: "{app}\doc\akfquiz.url"; Section: "InternetShortcut"; Key: "URL"; String: "http://akfoerster.de/akfquiz/index.de.html"; Languages: de
 Filename: "{app}\doc\quizupload.url"; Section: "InternetShortcut"; Key: "URL"; String: "http://akfoerster.de/akfquiz/quizupload"
 
@@ -152,22 +139,22 @@ Name: "{group}\{cm:doc}\HTML\scrquiz"; Filename: "{app}\doc\{cm:langdoc}\scrquiz
 Name: "{group}\{cm:doc}\HTML\mkquiz";  Filename: "{app}\doc\{cm:langdoc}\mkquiz.html";
 ;Name: "{group}\{cm:doc}\HTML\cgiquiz"; Filename: "{app}\doc\{cm:langdoc}\cgiquiz.html"; Tasks: cgi;
 Name: "{group}\{cm:doc}\HTML\linequiz"; Filename: "{app}\doc\{cm:langdoc}\linequiz.html";
-;Name: "{group}\{cm:quizfiles}"; Filename: "{app}\share\akfquiz\"; Flags: foldershortcut;
+Name: "{group}\{cm:quizfiles}"; Filename: "{app}\share\akfquiz\";
 ; WorkingDir for grquiz, because of stout.txt, stderr.txt
 Name: "{group}\grquiz"; Filename: "{app}\bin\grquiz.exe"; WorkingDir: "{app}\bin";
 Name: "{group}\scrquiz"; Filename: "{app}\bin\scrquiz.exe";
 ;Name: "{group}\linequiz"; Filename: "{app}\bin\linequiz.exe";
 Name: "{group}\{cm:htmlupdate}"; Filename: "{app}\bin\mkquiz.exe"; WorkingDir: "{app}\share\akfquiz"; Parameters: "--out ""{app}\html"" --index --auto";
 Name: "{group}\{cm:htmlstart}"; Filename: "{app}\html\index.html";
-Name: "{group}\{cm:new}"; Filename: "{app}\bin\wquizchooser.exe"; Tasks: edit
 Name: "{group}\{cm:ProgramOnTheWeb,AKFQuiz}"; Filename: "{app}\doc\akfquiz.url";
 Name: "{group}\{cm:quizupload}"; Filename: "{app}\doc\quizupload.url"; Tasks: edit
 Name: "{group}\{cm:UninstallProgram,AKFQuiz}"; Filename: "{uninstallexe}"
-Name: "{commondesktop}\grquiz"; Filename: "{app}\bin\grquiz.exe"; WorkingDir: "{app}\bin"; Tasks: desktopicon
 Name: "{app}\share\akfquiz\{cm:htmlupdate}"; Filename: "{app}\bin\mkquiz.exe"; WorkingDir: "{app}\share\akfquiz"; Parameters: "--out ""{app}\html"" --index --auto";
 Name: "{app}\share\akfquiz\{cm:htmlstart}"; Filename: "{app}\html\index.html";
-Name: "{app}\share\akfquiz\{cm:new}"; Filename: "{app}\bin\wquizchooser.exe"; Tasks: edit
+;Name: "{app}\share\akfquiz\{cm:new}"; Filename: "{app}\bin\wquizchooser.exe"; Tasks: edit
 ;Name: "{app}\share\akfquiz\{cm:doc}"; Filename: "{app}\doc";
+Name: "{commondesktop}\grquiz"; Filename: "{app}\bin\grquiz.exe"; WorkingDir: "{app}\bin"; Tasks: desktopicon
+Name: "{commondesktop}\AKFQuiz"; Filename: "{app}\share\akfquiz\"; Tasks: desktopicon
 
 [Registry]
 Root: HKCR; Subkey: ".akfquiz"; ValueType: string; ValueName: ""; ValueData: "AKFQuiz"; Flags: deletekey uninsdeletekey
