--- a/srcbin/common.in
+++ b/srcbin/common.in
@@ -1,4 +1,4 @@
-# $Id: common.in,v 1.9 2006/09/21 08:46:15 akf Exp $
+# $Id: common.in,v 1.10 2006/09/30 07:53:19 akf Exp $
 
 #####################################################################
 # change here:
@@ -66,7 +66,8 @@ scrquiz: scrquiz.pas qsys.pas qmsgs.pas uakfquiz.pas
 linequiz: linequiz.pas qsys.pas qmsgs.pas uakfquiz.pas
 	$(PC) $(PFLAGS) $(POPT) $(DEFINES) linequiz.pas
 
-cgiquiz: cgiquiz.pas uakfquiz.pas qmsgs.pas qsys.pas htmlquiz.pas
+cgiquiz: cgiquiz.pas uakfquiz.pas qmsgs.pas qsys.pas htmlquiz.pas \
+         styles.pas pngdata.inc
 	$(PC) $(PFLAGS) $(POPT) $(DEFINES) cgiquiz.pas
 
 introsnd.inc: introsnd.ub
