--- a/srcbin/Makefile.xarm
+++ b/srcbin/Makefile.xarm
@@ -1,6 +1,6 @@
 # use FPC Cross-Compiler for Linux on ARM devices
 
-# $Id: Makefile.xarm,v 1.3 2006/08/17 08:27:58 akf Exp $
+# $Id: Makefile.xarm,v 1.4 2006/10/02 12:49:32 akf Exp $
 
 # Edit this file for Compiler-specific configuration
 # make further changes in common.mak
@@ -19,6 +19,7 @@ NATIVEPFLAGS=-Sh -Sd
 #DEFINES+=-dSDL
 
 #DEFINES+=-dAdvertisement
+#DEFINES+=-dSdlSoundForAll
 #DEFINES+=-dGTK2
 #DEFINES+=-dNoHide
 #DEFINES+=-dscrNoEscKey
