--- a/srcbin/Makefile.grx
+++ b/srcbin/Makefile.grx
@@ -1,6 +1,6 @@
 # Compile with GPC for the native machine using the GRX library
 
-# $Id: Makefile.grx,v 1.2 2006/09/13 05:26:44 akf Exp $
+# $Id: Makefile.grx,v 1.3 2006/10/02 14:11:25 akf Exp $
 
 # make further changes in common.mak
 
@@ -50,5 +50,7 @@ SOUNDOBJ=
 #GUIFLAG=-mwindows
 
 SHELL = /bin/sh
+
+all: unix
 
 include common.mak
