--- a/srcbin/common.in
+++ b/srcbin/common.in
@@ -1,4 +1,4 @@
-# $Id: common.in,v 1.11 2006/10/02 12:49:32 akf Exp $
+# $Id: common.in,v 1.12 2006/10/02 14:11:25 akf Exp $
 
 #####################################################################
 # change here:
@@ -33,8 +33,8 @@ SVERSION = @SVERSION@
 
 ######################################################################
 
-# "all" is for Unix with all libraries
-all: scrquiz linequiz diaquiz mkquiz cgiquiz grquiz
+# unix: for Unix with all libraries
+unix: scrquiz linequiz diaquiz mkquiz cgiquiz grquiz
 
 # "most" leaves some critical progs away
 most: scrquiz linequiz mkquiz cgiquiz diaquiz 
